UX improvement alignment issue and sidebar scroll issue (#151)
* PAC 6613 resolved alignment and sidebar scroll issue

* removed package-lock file

--- a/static/css/_landing.scss
+++ b/static/css/_landing.scss
@@ -115,8 +115,8 @@
           display: none;
         }
         max-width: 485px;
-        max-height: 343px;
-        min-height: 343px;
+        max-height: 355px;
+        min-height: 355px;
         border-radius: 8px;
         @media (max-width: 1024px) {
         }
