--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -137,6 +137,9 @@ input[type="button"] {
 .align-items-center {
   align-items: center;
 }
+.align-items-end {
+  align-items: flex-end;
+}
 .justify-content-between {
   justify-content: space-between;
 }
